@@ -1,3 +1,8 @@
+2005-12-14  Andrew Haley  <aph@redhat.com>
+
+	* gnu/java/rmi/rmic/CompilerProcess.java: Use a new thread to
+	handle stdout from the child process.
+
 2005-12-14  Tom Tromey  <tromey@redhat.com>
 
 	PR classpath/25389:
